# nairi

./: .dockerignore  .gitignore  Makefile  README.md  sample_prompt.txt  ssh.config
backend/: Cargo.toml  README.md  docker-compose.yml  nairi.db
backend/crates/nairi-api/: Cargo.toml
backend/crates/nairi-api/src/: auth.rs  lib.rs
backend/crates/nairi-ast/: Cargo.toml
backend/crates/nairi-ast/src/: lib.rs
backend/crates/nairi-ast/src/ghidra/: mod.rs
backend/crates/nairi-ast/src/ir/: mod.rs
backend/crates/nairi-ast/src/manifest/: mod.rs
backend/crates/nairi-ast/src/smali/: mod.rs
backend/crates/nairi-ast/tests/smali/: MyClass.smali
backend/crates/nairi-core/: Cargo.toml
backend/crates/nairi-core/src/: analysis.rs  config.rs  errors.rs  lib.rs
backend/crates/nairi-core/src/telemetry/: logger.rs  mod.rs  otlp.rs
backend/crates/nairi-graph/: Cargo.toml
backend/crates/nairi-graph/src/: db.rs  lib.rs
backend/crates/nairi-graph/src/ingest/: mod.rs
backend/crates/nairi-graph/src/mapping/: mod.rs
backend/crates/nairi-graph/src/query/: mod.rs
backend/crates/nairi-graph/tests/: memgraph_integration.rs
backend/crates/nairi-orchestrator/: Cargo.toml
backend/crates/nairi-orchestrator/src/: engine.rs  lib.rs  pipeline.rs
backend/crates/nairi-server/: Cargo.toml
backend/crates/nairi-server/src/: main.rs
backend/crates/nairi-storage/: Cargo.toml
backend/crates/nairi-storage/src/: lib.rs
backend/runtime/ebpf/: README.md
backend/runtime/ebpf/probes/: trace_fs.bt  trace_properties.bt  trace_runtime.bt
docker/: Makefile  README.md
docker/compose/: docker-compose.dev.yml  docker-compose.prod.yml
docker/images/backend-server/: Dockerfile
docker/images/frontend-web/: Dockerfile  nginx.conf
docker/images/orchestrator/: Dockerfile
docker/images/runtime-analysis/: Dockerfile
docker/images/runtime-analysis/.agents/skills/adb/: SKILL.md
docker/images/runtime-analysis/ebpf/: README.md
docker/images/runtime-analysis/ebpf/parsers/: parse_trace_experiment_csv.py
docker/images/runtime-analysis/ebpf/probes/: trace_net.bt
docker/images/runtime-analysis/ebpf/runners/: README.md  run_trace_experiments.sh
docker/images/runtime-analysis/runtime/: README.md  run_runtime_analysis.sh  ui_explorer.py
docker/images/static-analysis/: Dockerfile
docker/images/static-analysis/.agents/skills/apktool/: SKILL.md
docker/images/static-analysis/.agents/skills/ghidra-cli/: SKILL.md
docker/images/static-analysis/.agents/skills/jadx/: SKILL.md
docker/scripts/: build-images.sh
docker/scripts/runtime/: tunnel-down.sh  tunnel-status.sh  tunnel-up.sh
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
frontend/playwright-report/: index.html
frontend/public/: mockServiceWorker.js
frontend/src/: App.tsx  api.ts  main.tsx  setupTests.ts  styles.css
frontend/src/mocks/: handlers.ts
frontend/src/pages/: ConfigView.test.tsx  ConfigView.tsx  LiveRunsView.tsx  PromptsView.tsx  ReportsView.tsx  UploadView.test.tsx  UploadView.tsx
frontend/tests/: app.spec.ts
ops/ssh/: README.md  ssh.config.example
reports/: static-analysis-findings.json  static-analysis-report.md  tool-execution-log.md
research/trace-experiments/: README.md
spec/: nairi-ai-agent-orchestration.md  nairi-ai-driven-static-analysis.md  nairi-architecture.md  nairi-ast-pipeline.md  nairi-configuration.md  nairi-data-model.md  nairi-network-and-pinning.md  nairi-overview.md  nairi-reporting.md  nairi-requirements.md  nairi-roadmap.md  nairi-runtime-analysis.md  nairi-security-and-compliance.md  nairi-static-analysis.md  nairi-technology-stack.md  nairi.md
spec/requirements/: fr-ai-orchestration.md  fr-configuration.md  fr-network.md  fr-reporting.md  fr-runtime.md  fr-static.md  nfr.md
