[workspace]
members = [
  "crates/nairi-core",
  "crates/nairi-storage",
  "crates/nairi-orchestrator",
  "crates/nairi-api",
  "crates/nairi-server",
]
resolver = "3"

[workspace.package]
authors = ["Artavazd Balaian <reasyu@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.94.0"
version = "0.1.0"

[workspace.dependencies]
chrono = { version = "0.4" }
criterion = { version = "0.8", features = ["async_tokio"] }
dashmap = { version = "6.1"}
flatbuffers = "25.12"
flatc-rust = "0.2.0"
futures = { version = "0.3" }
gethostname = "1.1.0"
local-ip-address = "0.6.10"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31.0", features = ["reqwest-rustls"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
prost = "0.14"
prost-types = "0.14"
rand = "0.10.0"
reqwest = "0.13.2"
rustc-hash = "2.1"
serde = { version = "1", features = ["derive", "rc"] }
serde_ext_duration = { version = "0.2.0"}
serde_json = "1"
strum = "0.28"
strum_macros = "0.28"
test-log = "0.2"
testcontainers = { version = "0.26.3", features = ["watchdog"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = { version = "1.0.3"}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.21.0", features = ["default", "v4"]}
