[workspace]
members = [
  "crates/nairi-core",
  "crates/nairi-storage",
  "crates/nairi-orchestrator",
  "crates/nairi-api",
  "crates/nairi-server", "crates/nairi-ast", "crates/nairi-graph",
]
resolver = "3"

[workspace.package]
authors = ["Artavazd Balaian <reasyu@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
rust-version = "1.94.0"
version = "0.1.0"

[workspace.dependencies]
nairi-api = { path = "crates/nairi-api" }
nairi-ast = { path = "crates/nairi-ast" }
nairi-core = { path = "crates/nairi-core" }
nairi-graph = { path = "crates/nairi-graph" }
nairi-orchestrator = { path = "crates/nairi-orchestrator" }
nairi-server = { path = "crates/nairi-server" }
nairi-storage = { path = "crates/nairi-storage" }
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = "4.5"
dashmap = { version = "6.1"}
dotenvy = "0.15.7"
gethostname = "1.1.0"
jsonwebtoken = "9.3"
local-ip-address = "0.6.10"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31.0", features = ["reqwest-rustls"] }
opentelemetry-resource-detectors = "0.10.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
rayon = "1.11.0"
reqwest = { version = "0.13.2", features = ["json", "form", "query", "rustls"] }
roxmltree = "0.21.1"
rsmgclient = { git = "https://github.com/memgraph/rsmgclient.git", rev = "ce4fa893339831d8604ac31189a77b9b00913816" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3.26.0"
testcontainers = { version = "0.27", features = ["watchdog", "blocking"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.20.10"
tree-sitter-smali = "1.0.0"
uuid = { version = "1.21.0", features = ["default", "v4", "serde"] }

