[package]
name = "nairi-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
gethostname = { workspace = true }
local-ip-address = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-resource-detectors = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["default", "spec_unstable_metrics_views"] }
serde.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
