[package]
name = "nairi-graph"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
nairi-ast.workspace = true
rsmgclient.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4"] }
