[package]
name = "nairi-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
nairi-core = { path = "../nairi-core" }
nairi-storage = { path = "../nairi-storage" }
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
uuid.workspace = true
nairi-ast = { path = "../nairi-ast" }
nairi-graph = { path = "../nairi-graph" }
clap = { version = "4.4", features = ["derive"] }
rsmgclient.workspace = true
