[package]
name = "nairi-server"
version.workspace = true
edition.workspace = true

[dependencies]
nairi-api = { path = "../nairi-api" }
nairi-orchestrator = { path = "../nairi-orchestrator" }
nairi-storage = { path = "../nairi-storage" }
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
